[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google_auth_2fa_exporter"
version = "0.1.0"
description = "A fantastic Python project." # User should update this
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # User should update this
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = { text = "MIT" } # Example license
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    # Add core runtime dependencies here
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "zxing-cpp>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",  # Type checker for static analysis
]

[project.urls]
Homepage = "https://github.com/CaptainCodeAU/google_auth_2fa_exporter" # Optional: Update URL
Repository = "https://github.com/CaptainCodeAU/google_auth_2fa_exporter" # Optional: Update URL

[project.scripts]
google-auth-2fa-exporter = "google_auth_2fa_exporter.cli:main"

# Use hatch to manage version based on __init__.py
[tool.hatch.version]
path = "src/google_auth_2fa_exporter/__init__.py"

# Example Ruff configuration (adjust as needed)
[tool.ruff]
src = ["src", "tests"]
line-length = 88
indent-width = 4
target-version = "py312" # e.g., py311

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "A", "RUF"] # Sensible defaults
ignore = ["E501"] # Handled by formatter
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["google_auth_2fa_exporter"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow 'assert' in tests

# Example Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=google_auth_2fa_exporter --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

# Mypy type checking configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[dependency-groups]
dev = [
    "grpcio-tools>=1.78.1",
    "mypy-protobuf>=5.0.0",
]
